--- a/src/gui/DepartamentoLista.fxml
+++ b/src/gui/DepartamentoLista.fxml
@@ -36,6 +36,7 @@
           <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
           <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Nome" />
             <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
+            <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
         </columns>
       </TableView>
       <Label prefHeight="233.0" prefWidth="468.0" VBox.vgrow="ALWAYS" />
