--- a/src/gui/VendedorLista.fxml
+++ b/src/gui/VendedorLista.fxml
@@ -35,6 +35,9 @@
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="Id" />
           <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="Nome" />
+            <TableColumn fx:id="tableColumnEmail" prefWidth="75.0" text="E-mail" />
+            <TableColumn fx:id="tableColumnBirthDate" prefWidth="75.0" text="Nascimento" />
+            <TableColumn fx:id="tableColumnBaseSalary" prefWidth="75.0" text="Salário Base" />
             <TableColumn fx:id="tableColumnEDIT" prefWidth="75.0" />
             <TableColumn fx:id="tableColumnREMOVE" prefWidth="75.0" />
         </columns>
